# csci5570

./: .travis.yml  CMakeLists.txt  README.md
app/: simple_example.cpp
base/: CMakeLists.txt  abstract_id_mapper.hpp  abstract_partition_manager.cpp  abstract_partition_manager.hpp  actor_model.hpp  magic.hpp  message.hpp  message_test.cpp  node.hpp  range_partition_manager.cpp  range_partition_manager.hpp  range_partition_manager_test.cpp  serialization.cpp  serialization.hpp  threadsafe_queue.hpp
cmake/: dep.cmake
cmake/modules/: zeromq.cmake
comm/: abstract_mailbox.hpp  abstract_sender.hpp  mailbox.cpp  mailbox.hpp  mailbox_test.cpp  sender.cpp  sender.hpp  sender_test.cpp
driver/: CMakeLists.txt  engine.cpp  engine.hpp  engine_test.cpp  info.hpp  ml_task.hpp  simple_id_mapper.cpp  simple_id_mapper.hpp  simple_id_mapper_test.cpp  worker_spec.cpp  worker_spec.hpp  worker_spec_test.cpp
io/: CMakeLists.txt  coordinator.cpp  coordinator.hpp  hdfs_assigner.cpp  hdfs_assigner.hpp  hdfs_file_splitter.cpp  hdfs_file_splitter.hpp  line_input_format.hpp
lib/: abstract_aync_data_loader.hpp  abstract_data_loader.hpp  labeled_sample.hpp  parser.hpp
scripts/: launch.py
server/: CMakeLists.txt  abstract_model.hpp  abstract_storage.hpp  map_storage.hpp  map_storage_test.cpp  server_thread.cpp  server_thread.hpp  server_thread_test.cpp
server/consistency/: asp_model.cpp  asp_model.hpp  asp_model_test.cpp  bsp_model.cpp  bsp_model.hpp  bsp_model_test.cpp  ssp_model.cpp  ssp_model.hpp  ssp_model_test.cpp
server/util/: pending_buffer.cpp  pending_buffer.hpp  pending_buffer_test.cpp  progress_tracker.cpp  progress_tracker.hpp  progress_tracker_test.cpp
test/: CMakeLists.txt  test_hdfs_read.cpp  test_server.cpp  test_worker.cpp
worker/: abstract_callback_runner.hpp  kv_client_table.hpp  kv_client_table_test.cpp  worker_thread.hpp
